# depth-anything-3d-viewer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLI_MIGRATION_COMPLETE.md  CLI_MIGRATION_INSTRUCTIONS.md  CONTRIBUTING.md  FEATURE_ASSET_AUDIT.md  FEATURE_PROPOSAL.md  GITHUB_REPO_SETUP.md  GPU_SETUP.md  LICENSE  METRIC_DEPTH_IMPLEMENTATION.md  METRIC_DEPTH_SUMMARY.md  MODELS.md  NEXT_STEPS.md  PACKAGE_SUMMARY.md  PROJECTOR_GUIDE.md  README.md  REBRANDING_SUMMARY.md  SETUP.md  TESTING_QUICKSTART.md  TODO_METRIC_DEPTH.md  VISUALIZATION_ANALYSIS.md  VISUALIZATION_REPORT.md  analyze_depth_data.py  analyze_depth_layers.py  calibrate_webcam.py  capture_depth_frame.py  config.yaml  create_3d_asset.py  create_test_asset.py  debug_depth.npy  depth_analysis_output.txt  download_metric_weights.ps1  evaluate_visualizations.py  final_eval.txt  fix_webcam_script.py  generate_mode_comparison.py  generate_tuned_visualization.py  (+22 more)
.agent/: rules.md
.claude/: settings.local.json
config/: projection_example.yaml  projection_ready.yaml
da3d/: __init__.py  config.py
da3d/cli/: __init__.py  commands.py  config.py  legacy.py  main.py  status.py
da3d/estimators/: base_estimator.py  da3_estimator.py  vda_estimator.py
da3d/evaluation/: vision_agent.py
da3d/projection/: __init__.py  calibration.py  config.py  engine.py  parallax.py  sources.py
da3d/verification/: agent_report.py  data_validator.py  visual_validator.py
da3d/viewing/: __init__.py  gui_viewer.py  mesh.py
docs/guides/: depth_defaults.md  depth_tuning.md  metric_depth.md  realtime_3d.md  screen_capture.md  static_viewing.md
test_outputs_debug/: depth_raw.npy
test_outputs_multicam/camera_0_logi_cam_c920e/: depth_raw.npy
test_outputs_multicam/camera_1_hd_pro_webcam_c920/: depth_raw.npy
test_results/current/: report.md  vision_agent_review.md
test_verify/: depth_raw.npy  verification_report.md
tests/: capture_test_case.py  check_model_output.py  review_visuals.py  test_depth_mapping_diagnostic.py  test_metric_projection.py  test_metric_projection_fixes.py  test_realtime_perf.py  test_vision_evaluation.py  test_webcam_single_frame.py  visual_test.py
tests/data/: test_depth.npy
tools/: analyze_depth_data.py  analyze_depth_layers.py  analyze_feedback.py  calibrate_webcam.py  capture_depth_frame.py  check_visualization.py  evaluate_visualizations.py  extract_assessments.py  fix_webcam_script.py  generate_mode_comparison.py  generate_tuned_visualization.py  render_interactive_view.py  run_multicam_test.py  test_all_features.sh  verify_da3.py  verify_scale.py
