[project]
name = "depth-anything-3d"
version = "0.1.0"
description = "3D viewing extensions for Video-Depth-Anything with interactive mesh visualization and real-time rendering"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Video-Depth-Anything-3D Contributors"}
]
keywords = ["depth-estimation", "3d-visualization", "computer-vision", "depth-anything", "real-time-rendering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "torch>=2.0.0,<2.5.0",
    "torchvision>=0.15.0,<0.20.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "open3d>=0.18.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "einops>=0.8.1",
    "easydict>=1.13",
    "imageio>=2.37.2",
    "python-dotenv>=1.2.1",
    "openai>=2.8.1",
]

[project.optional-dependencies]
screen = [
    "mss>=9.0.0",
]
virtual-cam = [
    "pyvirtualcam>=0.10.0",
]
demo = [
    "gradio>=4.0.0",
]
da3 = [
    "depth-anything-3 @ git+https://github.com/ByteDance-Seed/Depth-Anything-3",
]
xformers = [
    "xformers>=0.0.27,<0.0.28",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
all = [
    "mss>=9.0.0",
    "pyvirtualcam>=0.10.0",
    "gradio>=4.0.0",
    "xformers>=0.0.23",
]

[project.urls]
Homepage = "https://github.com/ricklon/depth-anything-3d-viewer"
Documentation = "https://github.com/ricklon/depth-anything-3d-viewer/tree/main/docs"
Repository = "https://github.com/ricklon/depth-anything-3d-viewer"
Issues = "https://github.com/ricklon/depth-anything-3d-viewer/issues"

[project.scripts]
da3d = "da3d.cli.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["da3d*"]

[tool.setuptools.package-data]
da3d = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv]
# UV-specific configuration for dependency resolution
index-strategy = "unsafe-best-match"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
